@@ -1,3 +1,8 @@
+2015-04-28         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y (yylex): Rework the bracket handling from zero.
+	Thanks to Michal Jaegermann for yet another test case.
+
 2015-04-27         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.y (yylex): Make change of Jan 7 for parsing regexps
